scripts/resource-health/sample-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhc
  namespace: resource-health
  annotations:
    kubernetes.io/ingress.class: apisix
    k8s.apisix.apache.org/rewrite-target-regex: "/api/healthchecks/(.*)"
    k8s.apisix.apache.org/rewrite-target-regex-template: "/$1"
    ${CLUSTER_ISSUER_ANNOTATION}
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - resource-health.${INGRESS_HOST}
      secretName: resource-health-tls
  rules:
    - host: resource-health.${INGRESS_HOST}
      http:
        paths:
          - path: /api/healthchecks
            pathType: Prefix
            backend:
              service:
                name: resource-health-check-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rht
  namespace: resource-health
  annotations:
    kubernetes.io/ingress.class: apisix
    k8s.apisix.apache.org/rewrite-target-regex: "/api/telemetry/(.*)"
    k8s.apisix.apache.org/rewrite-target-regex-template: "/$1"
    ${CLUSTER_ISSUER_ANNOTATION}
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - resource-health.${INGRESS_HOST}
      secretName: resource-health-tls
  rules:
    - host: resource-health.${INGRESS_HOST}
      http:
        paths:
          - path: /api/telemetry
            pathType: Prefix
            backend:
              service:
                name: resource-health-telemetry-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhw
  namespace: resource-health
  annotations:
    kubernetes.io/ingress.class: apisix
    ${CLUSTER_ISSUER_ANNOTATION}
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - resource-health.${INGRESS_HOST}
      secretName: resource-health-tls
  rules:
    - host: resource-health.${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resource-health-web
                port:
                  number: 80
